[tool.poetry]
name = "commitlint-pre-commit-hook"
version = "0.1.0"
description = ""
authors = ["Zhen Jun Xu"]
readme = "README.md"
packages = [{include = "commitlint_pre_commit_hook"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
