[tool.poetry]
authors = ["Zhen Jun Xu"]
description = ""
name = "commitlint-pre-commit-hook"
packages = [{include = "commitlint_pre_commit_hook"}]
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
